--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns='http://www.w3.org/1999/xhtml' xmlns:fb='http://www.facebook.com/2008/fbml' xmlns:og='http://opengraphprotocol.org/schema/'>
 <head>
-	<title>BA Chargen 0.5</title>
+	<title>BA Chargen 0.9</title>
 	<link rel="stylesheet" href="css/app.css" type="text/css" media="all" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="apple-touch-icon" href="_img/icon.png"/>  
-    <link rel="apple-touch-startup-image" href="_img/splash.png" />  
+	<link rel="apple-touch-icon" href="_img/ui/icon.png"/>  
+    <link rel="apple-touch-startup-image" href="_img/ui/splash.png" />  
 
 	<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0" />
 
@@ -59,7 +59,8 @@
 	<script type="text/javascript" src="js/views/ViewCharacterHeader.js"></script>
 	<script type="text/javascript" src="js/views/ViewTactic.js"></script>
 	<script type="text/javascript" src="js/views/ViewCharacterListEntry.js"></script>
-	
+	<script type="text/javascript" src="js/views/ViewSupernaturalAbility.js"></script>
+
 	<script type="text/javascript" src="js/views/ViewTabs.js"></script>
 	<script type="text/javascript" src="js/views/ViewTabTest.js"></script>	
 	<script type="text/javascript" src="js/views/ViewTabAbilities.js"></script>
@@ -102,7 +103,10 @@
 
 	<div id="appContent"></div>
 
+	<div id="appOverlay"></div>
+
 	<div id="appDialog">
+		<div id="appDialogHeader"><span>Title</span></div>
 		<div id="appDialogContent"></div>
 	</div>
 </div>
