--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns='http://www.w3.org/1999/xhtml' xmlns:fb='http://www.facebook.com/2008/fbml' xmlns:og='http://opengraphprotocol.org/schema/'>
 <head>
-	<title>BA Chargen 0.9</title>
+	<title>Better Angels Web App</title>
 	<link rel="stylesheet" href="css/app.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/ViewTabs.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/menu.css" type="text/css" media="all" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="apple-touch-icon" href="_img/ui/icon.png"/>  
-    <link rel="apple-touch-startup-image" href="_img/ui/splash.png" />  
+	<link rel="apple-touch-icon" href="img/ui/icon.png"/>  
+    <link rel="apple-touch-startup-image" href="img/ui/splash.png" />  
 
 	<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0" />
-
-	<!-- Remote Libraries -->
-	<script src="http://connect.facebook.net/en_US/all.js"></script>
 
 	<!-- Libraries -->
 	<script type="text/javascript" src="js/libraries/underscore-min.js"></script>
@@ -35,6 +34,10 @@
 	<script type="text/javascript" src="js/models/ModelUser.js"></script>
 	<script type="text/javascript" src="js/models/ModelCharacter.js"></script>
 	<script type="text/javascript" src="js/models/ModelSupernaturalAbility.js"></script>
+	
+	<script type="text/javascript" src="js/models/ModelFormOption.js"></script>
+	<script type="text/javascript" src="js/models/ModelFormOptionSupernaturalAbility.js"></script>
+	<script type="text/javascript" src="js/models/ModelFormOptionCharacterImage.js"></script>
 
 	<!-- Collections -->
 	<script type="text/javascript" src="js/collections/CollectionSupernaturalAbility.js"></script>
@@ -55,18 +58,29 @@
 	<script type="text/javascript" src="js/views/ViewPageMore.js"></script>
 	<script type="text/javascript" src="js/views/ViewPageDynamic.js"></script>
 
-
 	<script type="text/javascript" src="js/views/ViewCharacterHeader.js"></script>
 	<script type="text/javascript" src="js/views/ViewTactic.js"></script>
 	<script type="text/javascript" src="js/views/ViewCharacterListEntry.js"></script>
 	<script type="text/javascript" src="js/views/ViewSupernaturalAbility.js"></script>
 
 	<script type="text/javascript" src="js/views/ViewTabs.js"></script>
+	<script type="text/javascript" src="js/views/ViewSequentialTabs.js"></script>
+
+	<script type="text/javascript" src="js/views/ViewTab.js"></script>	
 	<script type="text/javascript" src="js/views/ViewTabTest.js"></script>	
 	<script type="text/javascript" src="js/views/ViewTabAbilities.js"></script>
 	<script type="text/javascript" src="js/views/ViewTabStrategy.js"></script>
 	<script type="text/javascript" src="js/views/ViewTabMore.js"></script>
 	<script type="text/javascript" src="js/views/ViewTabCharacterList.js"></script>
+
+	<script type="text/javascript" src="js/views/ViewTabDialogAbilityTactics.js"></script>
+	<script type="text/javascript" src="js/views/ViewTabDialogAbilityInfo.js"></script>
+	<script type="text/javascript" src="js/views/ViewTabDialogAbility.js"></script>
+
+	<script type="text/javascript" src="js/views/ViewTabDialogCharacterImageSource.js"></script>
+	<script type="text/javascript" src="js/views/ViewTabDialogCharacterImageGallery.js"></script>
+	<script type="text/javascript" src="js/views/ViewCharacterImageGalleryFacebook.js"></script>
+	<script type="text/javascript" src="js/views/ViewCharacterImageGalleryLocal.js"></script>
 
 	<script type="text/javascript" src="js/views/ViewDialog.js"></script>
 	<script type="text/javascript" src="js/views/ViewDialogLoading.js"></script>
@@ -89,27 +103,30 @@
 </head>
 <body>
 
-<div id="fb-root"></div>
+	<!-- Remote Libraries -->
+	<script src="http://connect.facebook.net/en_US/all.js"></script>
 
-<div id="appRoot">
-	
-	<div id="appHeader" class="clear-block">
-		<div id="appTitle">Better Angels</div>
+	<div id="fb-root"></div>
 
-		<div id="appBackButton" class="fauxlink">Back</div>
+	<div id="appRoot">
+		
+		<div id="appHeader" class="clear-block">
+			<div id="appTitle"><span>Better Angels</span></div>
 
-		<div id="appStatus"></div>
+			<div id="appBackButton" class="fauxlink"><span>Back</span></div>
+
+			<div id="appStatus"></div>
+		</div>
+
+		<div id="appContent"></div>
+
+		<div id="appOverlay"></div>
+
+		<div id="appDialog">
+			<div id="appDialogHeader"><span>Title</span></div>
+			<div id="appDialogContent"></div>
+		</div>
 	</div>
-
-	<div id="appContent"></div>
-
-	<div id="appOverlay"></div>
-
-	<div id="appDialog">
-		<div id="appDialogHeader"><span>Title</span></div>
-		<div id="appDialogContent"></div>
-	</div>
-</div>
 
 </body>
 </html>
